language/move-lang/tests/move_check/parser/invalid_call_lhs_value.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_call_lhs_value.move:3:10
  │
3 │         5();
  │          ^
  │          │
  │          Unexpected '('
  │          Expected ';'

